--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,10 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["master"]
+  pull_request:
+    types: [opened, synchronize]
+    branches:
+      - 'releases/**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
