--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,7 @@ on:
   pull_request:
     types: [opened, synchronize]
     branches:
-      - 'releases/**'
-
+      - master
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
