--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         
+      - name: Install dependencies
+        run: npm install
+        
       - name: Build site
         run: npm run build
 
