--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Ignore generated config file
+public/data/config.json
 
 # dependencies
 /node_modules
