--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "bootstrap": "^5.1.3",
-    "classnames": "^2.3.1",
+    "clsx": "^1.2.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^8.0.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.0",
     "sass": "^1.49.8",
     "typescript": "^4.5.5",
