--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
         
       - name: Install dependencies
         run: npm install
+
+      - name: Run tests
+        run: npm run test
         
       - name: Build site
         run: npm run build
@@ -36,7 +39,7 @@ jobs:
         with:
           host: thegreatescapism.com
           username: github
-          source: /home/runner/work/is-it-a-pie/is-it-a-pie/build/*
+          source: /home/runner/work/is-it-a-pie/is-it-a-pie/dist/*
           target: /var/www/is-it-a-pie/root
           tar_tmp_path: /home/github/temp
           strip_components: 3
