Strip consoles on build

--- a/public/data/rounds/3/config.json
+++ b/public/data/rounds/3/config.json
@@ -34,7 +34,7 @@
       "isIt": false
     },
     {
-      "description": "Alanis Morissette is very good at identifying irony",
+      "description": "Meeting the man of your dreams, and then meeting his beautiful wife",
       "isIt": true
     }
   ]
