Fix categorisation error
Fixes an issue in one of the categories

--- a/public/data/rounds/1/config.json
+++ b/public/data/rounds/1/config.json
@@ -12,7 +12,7 @@
     },
     {
       "description": "Pizza",
-      "isIt": false
+      "isIt": true
     },
     {
       "description": "Cherry pie",
