--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@vanilla-extract/css": "^1.10.0",
+    "@vanilla-extract/recipes": "^0.4.0",
     "bootstrap": "^5.2.3",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
@@ -25,6 +27,9 @@
     "@types/node": "^18.15.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "@vanilla-extract/vite-plugin": "^3.8.0",
     "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
